OEL-4896: Rename path to get-messages and add tests.
